--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Slyaka</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon"  href="/%PUBLIC_URL%/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
