--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Slyaka</title>
-    <link rel="icon"  href="/%PUBLIC_URL%/favicon.png" />
+    <!-- <link rel="icon" href="/%PUBLIC_URL%/favicon.png" /> -->
+    <link
+      rel="icon"
+      href="https://github.com/nehasaipangallu/yeption/blob/main/assets/favicon-32x32.png?raw=true"
+    />
   </head>
   <body>
     <div id="root"></div>
